toolchain/internal/core/analysis/testdata/errors/naming/type_not_pascal.ufo
// @expect: E101

type lowercase {
	id: string
}
